--- a/src/Step11/readme
+++ b/src/Step11/readme
@@ -1,8 +1,12 @@
-partial tree render, reference equality and rendering (turn highlights off)
+- partial tree rendering
+- reference equality and rendering (turn highlights off)
 
-"This is the first time the component rendered."
-"Context changed"
-"Hooks changed"
-"Props changed"
-"State changed"
-"The parent component rendered."
+- you should be aware of what is happening what code is running (rendering)
+
+- reasons for re-rendering
+    - "This is the first time the component rendered."
+    - "Context changed"
+    - "Hooks changed"
+    - "Props changed"
+    - "State changed"
+    - "The parent component rendered."
