--- a/src/Step13-2/readme
+++ b/src/Step13-2/readme
@@ -1,19 +1,6 @@
-Realistic example, React.memo (show profiler), https://github.com/facebook/react/issues/19778
-
-: Changes
-    use memoized export
-
-
-Possible values you can expect to see as reasons for a component rerendering:
-
-"This is the first time the component rendered."
-"Context changed"
-"Hooks changed"
-"Props changed"
-"State changed"
-"The parent component rendered."
-
-
-colors slow fast / red green
-
-chrome settings, more tools, rendering, paint flashing
+- realistic example with React.memo
+- show profiler, react browser plugin => settings => show highlights)
+- note https://github.com/facebook/react/issues/19778
+- changes to use memoized export in Child.jsx
+- colors slow fast / red green
+- chrome settings, more tools, rendering, paint flashing
