--- a/src/Step26/readme
+++ b/src/Step26/readme
@@ -1,1 +1,12 @@
-createAsyncThunk, extra reducers
+- createAsyncThunk wrapper
+- extra reducers
+
+
+## When to use Redux
+
+- You have larger amounts of application state that are needed in many places in the app
+- The app state is updated frequently over time
+- The logic to update that state may be complex
+- The app has a medium or large-sized codebase, and might be worked on by many people
+- You want to be able to understand when, why, and how the state in your application has updated, and visualize the changes to your state over time
+- You need more powerful capabilities for managing side effects, persistence, and data serialization
